syntax = "proto2";

package discovery;

import "../common/common.proto";

message Node {
    required string id = 1;
    repeated common.Capability capabilities = 2;
    required string name = 3;
}

message JoinClusterRequest {
    required Node node = 1;
}

message JoinClusterResponse {
}
